# molecule-signature-paper

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  env.yaml  environment.yaml  pyproject.toml  ruff.toml  setup.py
.github/: CODE_OF_CONDUCT.rst
.github/workflows/: build.yml  bump.yaml  release.yml
data/: README.md
notebooks/: 1.enumeration_create_alphabets.ipynb  2.enumeration_results.ipynb  3.alphabet_behavior.ipynb  3.analysis_alphabets.ipynb  4.degeneracy.ipynb  4.generation_evaluation.ipynb  4.generation_recovery.ipynb  5.degeneracy_plot.ipynb  5.generation_recovery.ipynb  5.generative_molforge.ipynb  6.statistics_databases.ipynb  7.enumeration_generation_analysis.ipynb  8.correlation_complexity_computation_time.ipynb  9.enumeration_drugbank_analysis.ipynb  AlphabetBehavior.ipynb  README.md  handy.py
recipes/: meta.yaml  workflow.yaml
src/paper/: download.py
src/paper/dataset/: download.py  download_metanetx.py  format_emolecules.py  prepare.py  tokenizer.py  tokens.py  utils.py
src/paper/deprecated/: download_emolecules.py  tokenizer.py
src/paper/img/: degenerescence.py  degenerescence_graph.py
src/paper/learning/: config.py  configure.py  data.py  evaluate.py  model.py  predict.py  train.py  utils.py
src/paper/transformer/: config.yaml  model.py  prepare.py  train.py
src/retrosig/: __main__.py  _version.py  alphabet.py  commands.py
src/retrosig/utils/: cmd.py  cmdline.py
