[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pyyaml"
]
build-backend = "setuptools.build_meta"

[project]
name = "GettingMoleculesFromFingerprints"
version = "2.0.3"
description = "Code supporting the paper 'Getting Molecules from their Fingerprints: Generative Models vs. Deterministic Enumeration'"
readme = "README.md"
license = {text = "MIT"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100
