[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pyyaml"
]
build-backend = "setuptools.build_meta"

[project]
name = "signature-paper"
version = "2.0.4"
description = "Code supporting the paper 'Getting Molecules from their Fingerprints: Generative Models vs. Deterministic Enumeration'"
authors = [
  {name = "Thomas Duigou", email = "thomas.duigou@inrae.fr"},
  {name = "Jean-Loup Faulon", email = "thomas.duigou@inrae.fr"},
  {name = "Guillaume Gricourt", email = "guillaume.gricourt@inrae.fr"},
  {name = "Philippe Meyer", email = "philippe.meyer@inrae.fr"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = [
    "chemistry",
    "chemoinformatics",
    "deterministic enumeration",
    "fingerprint",
    "generative model",
    "molecular generation",
    "signature",
]

[project.urls]
Repository = "https://github.com/brsynth/signature-paper"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100
