[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecule-signature-paper"
version = "3.0.0"
description = """\
            Repository supporting the publication 'Reverse \
            Engineering Molecules from Fingerprints through \
            Deterministic Enumeration and Generative Models.'\
            """
keywords = [
    "chemoinformatics",
    "generative model",
    "molecule fingerprint",
    "molecule enumeration",
    "molecule generation",
    "reverse engineering",
    "signature",
]
authors = [
    {name = "Thomas Duigou", email = "thomas.duigou@inrae.fr"},
    {name = "Jean-Loup Faulon", email = "jean-loup.faulon@inrae.fr"},
    {name = "Guillaume Gricourt", email = "guillaume.gricourt@inrae.fr"},
    {name = "Philippe Meyer", email = "philippe.meyer@inrae.fr"},
]
maintainers = [
    {name = "Thomas Duigou", email = "thomas.duigou@inrae.fr"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/brsynth/molecule-signature-paper"
Repository = "https://github.com/brsynth/molecule-signature-paper"
Issues = "https://github.com/brsynth/molecule-signature-paper/issues"
Changelog = "https://github.com/brsynth/molecule-signature-paper/blob/main/CHANGELOG.md"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100
